# startup

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: test_panic_afterbuild.sh
src/: eager_static.rs  lib.rs
testcases/: Cargo.toml  test.sh
testcases/dylib/: Cargo.toml  lib.rs
testcases/dylib_runner/: Cargo.toml  main.rs
testcases/paniclib/: Cargo.toml  lib.rs
testcases/smokebin/: Cargo.toml  main.rs
