[package]
name = "startup"
version = "0.1.0"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT OR Zlib"
description = "Tiny (no dependency, no proc macro) way to run some code before main."
readme = "README.md"
documentation = "https://docs.rs/startup"
homepage = "https://github.com/thomcc/startup"
repository = "https://github.com/thomcc/startup"
keywords = ["constructor", "ctor", "init", "main", "static"]
categories = ["rust-patterns", "no-std"]

[features]
eager_static = []
default = ["eager_static"]

[dependencies]


[workspace]
exclude = ["testcases/*"]
